--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is Food Application...",
   "scripts": {
     "start": "npx parcel src/index.html",
+    "build": "npx parcel build src/index.html",
     "test": "jest"
   },
   "author": "Prem R Mahajan",
